Implement caching and cache flushing for grouped product attributes in "ProductViewAttributeGroups" module

--- a/view/frontend/templates/product/attribute-groups.phtml
+++ b/view/frontend/templates/product/attribute-groups.phtml
@@ -1,7 +1,6 @@
 <?php
 /**
- * Copyright (c) Lobbster
- * See LICENSE for license details.
+ * Copyright (c) 2026 Lobbster. See LICENSE for license details.
  *
  * @var \Lobbster\ProductViewAttributeGroups\Block\Product\AttributeGroups $block
  * @var \Magento\Framework\Escaper $escaper
