--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -1,5 +1,5 @@
 /**
- * Copyright (c) Lobbster
+ * Copyright (c) 2026 Lobbster. See LICENSE for license details.
  * Styles for product view attribute groups. Themes may override.
  */
 & when (@media-common = true) {
